# damath.ai

./: .clang-format  .gitignore  meson.build
src/: engine.cc  engine.h  main.cc
src/app/: app.cc  app.h
src/damath/: board.cc  board.h
src/engine/: agent.h  arena.h  coach.h
src/game/: damath.cc  damath.h
src/mcts/: node.cc  node.h
src/neural/: network.cc  network.h
